--- a/view.jade
+++ b/view.jade
@@ -32,6 +32,7 @@ template(name='menu')
             li: a(href='sign-in') Login
             li: a(href='sign-up') Register
         if loggedIn
+            li: a= userEmail
             li: a(href='sign-out') Logout
 
 template(name='loading')
@@ -41,7 +42,12 @@ template(name='home')
     h3 Home Page
 
 template(name='list')
-    h3 Data List
+    .row
+        .col.m6
+            h3 Data List
+        .col.m6
+            .input-field
+                input#search(placeholder='Search')
     table.highlight
         thead
             tr
@@ -101,7 +107,10 @@ template(name='read')
                     td: b Patient Address
                     td= data.address
         .col.m6
-            +c3(myChart)
+            unless empty
+                +c3(myChart)
+            if empty
+                p There's no chart data to be displayed.
     br
     if addDetail
         h4 Add detail
