--- a/view.jade
+++ b/view.jade
@@ -51,7 +51,11 @@ template(name='home')
             .caption.left-align
                 h3 Grab it on Github
                 h5.light.grey-text.text-lighten-3 Read commits for learning
-    h3 Home Page
+    .row
+        .col.m6
+            p Welcome to Meteor CRUD sample. By cloning this repo from github you can learn many basic concepts of Meteor. Go to register, and try right away all features in this project. And yet we only need 3 coffee files and 1 jade file to create all of these.
+        .col.m6
+            p By using coffeescript and jade you'll learn Meteor in a fun way. We also use materialize css instead of bootstrap. And autoform to ease our job about form creation. For any other packages, you can read .meteor/packages
 
 template(name='list')
     .row
