--- a/view.jade
+++ b/view.jade
@@ -3,6 +3,7 @@ template(name='layout')
         <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'/>
     body
         +menu
+        +yield('fullWidth')
         .container
             +yield
 
@@ -13,6 +14,7 @@ template(name='menu')
             li: a(href='/list') List
             if loggedIn
                 li: a(href='/create') Create
+            li: a(href='/map') Map
         a.button-collapse(data-activates='slide-out')
             i.mdi.mdi-menu
         a.brand-logo.center Meteor CRUD
@@ -131,6 +133,7 @@ template(name='read')
                     td= data.address
             +personMap
         .col.m6
+            a(href='{{file.link}}')= file.name
             unless empty
                 +c3(myChart)
             if empty
@@ -185,4 +188,7 @@ template(name='update')
 
 template(name='personMap')
     h5 Location
-    #map
+    #personMap
+
+template(name='globalMap')
+    #globalMap
