--- a/style.styl
+++ b/style.styl
@@ -1,7 +1,11 @@
-#personMap
-    height 150px
-    width 450px
+html, body, .block
+	height 100%
 
-#globalMap
-    height 600px
-    width 100%
+.pin-top
+	position relative
+
+.pin-bottom
+	position relative
+
+.pinned
+	pinned fixed !important
